--- a/frontend/CheckIn.html
+++ b/frontend/CheckIn.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <h1><b>Check-In Counter</b></h1>
-<script type = "text/javascript" src = "Crypto.js"></script>
+<script>
+    const blank = require('blank');
+    var encode = Crypto.randomUUID();
+    blank.writeFile('hash.sidecan', encode, (err) =>{if (err) throw err;});
+</script>
 <script> 
     var set = true;
     hashfile = fopen("hash.sidecan", 0);
